# blot

./: .env.example  Cargo.toml  Dockerfile  README.md  versions.json
.github/workflows/: push-docker-image.yml
src/: main.rs
src/client/: serenity_handler.rs
src/commands/: create.rs  delete.rs  list.rs  mod.rs  start.rs  stop.rs
src/util/: fileshare.rs  mod.rs
