[package]
name = "blot"
version = "1.0.0"
authors = ["Arei2<contact@arei2.fr>"]
edition = "2024"
description = "A Discord bot to create and manage minecraft server."
repository = "https://github.com/arei22/blot"
publish = false

[profile.release]
codegen-units = 1
strip = true
lto = true

[dependencies]
tokio = { version = "1.47.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "rt",
    "process",
] }
diesel-async = { version = "0.7.4", features = [
    "postgres",
    "bb8",
    "async-connection-wrapper",
] }
serenity = { version = "0.12.4", features = [
    "client",
    "framework",
    "gateway",
    "model",
    "collector",
] }
diesel = { version = "2.3.4", features = ["postgres", "uuid"] }
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1.0.225", features = ["derive"] }
diesel_migrations = "2.3.1"
env_logger = "0.11.8"
dotenvy = "0.15.7"
chrono = "0.4.42"
log = "0.4.29"
serde_yml = "0.0.12"
serde_json = "1.0.145"
